--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -1,19 +1,42 @@
 .profile {
-  width: 100%;
-  display: block;
-  text-align: center; }
+  text-align: center;
+  display: block; }
 
-.profile_user, .profile_help {
+.profile_user {
   width: 80%;
-  height: 15rem;
-  border: solid black 3px;
-  border-radius: 5px;
-  display: inline-block;
-  margin-top: 1rem; }
+  display: inline-block; }
 
 .user-img, .user-data {
-  display: inline-block;
-  border: solid black 1px; }
+  display: inline-block; }
+
+.user-img {
+  font-size: 18rem;
+  border: solid #121224 4px;
+  padding: 1rem;
+  border-radius: 15%; }
+
+.user-data {
+  text-align: left; }
+
+.user-data h1 {
+  padding: 1rem;
+  margin: 1rem; }
 
 .help-icons {
+  display: inline-block;
+  font-size: 5rem;
+  padding: 2rem; }
+
+.help-icons:hover {
+  background-color: #121224;
+  color: white;
+  border-radius: 15%; }
+
+.profile_user, .profile_help {
+  margin-top: 5rem; }
+
+.profile_help {
+  border: solid #121224 4px;
+  padding: 1rem;
+  border-radius: 15px;
   display: inline-block; }
