--- a/scss/basic/base.scss
+++ b/scss/basic/base.scss
@@ -6,9 +6,27 @@
     padding: 0;
     font-family: 'Lato', sans-serif;
 }
+html{
+    width: 100%;
+    overflow-x: hidden;
+}
+html,body{
+    font-size: 62.5%;
+    @include respond(tab-land) {
+        font-size: 56.25%; //  1 rem = 9px, 9/16= 56.25%
+    }
+    @include respond(tab-port) {
+        font-size: 50%; //  1 rem = 8px, 8/16= 50%
+    }
+    @include respond(phone) {
+        font-size: 37.5%; //  1 rem = 6px, 6/16= 37.5%
+    }
+    @include respond(big-desktop) {
+        font-size: 75%; //  1 rem = 12px, 12/16= 75%
+    }  
+}
 
 .home , .reports, .products, .team, .messages, .support, .profile{
     display: flex;
     height: 90vh;
-    font-size:3rem;
 }
