--- a/scss/components/NavBar.scss
+++ b/scss/components/NavBar.scss
@@ -1,8 +1,8 @@
 .navbar{
-    background-color: #060b26;
+    background-color:$principal-color;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .nav-menu{
-    background-color: #060b26;
+    background-color:$principal-color;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -31,7 +31,7 @@
 
 .nav-text{
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding: 8px 0px 8px 16px;
     list-style-type: none;
@@ -40,7 +40,7 @@
 
 .nav-text a{
     text-decoration: none;
-    color: white;
+    color: $color-white;
     font-size: 18px;
     width: 95%;
     height: 100%;
@@ -51,7 +51,7 @@
 }
 
 .nav-text a:hover{
-    background-color: #1a83ff;
+    background-color:$secondary-color;
 }
 
 .nav-menu-items{
@@ -59,11 +59,11 @@
 }
 
 .navbar-toggle{
-    background-color: #060b26;
+    background-color:$principal-color;
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 
