--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,12 @@
+@import 'abstract/mixin';
+@import 'abstract/variables';
+
 @import 'basic/base';
 
 @import 'components/NavBar';
 
+@import 'pages/Home';
 @import 'pages/Support';
 @import 'pages/Products';
 @import 'pages/Profile';
+@import 'pages/Team';
