Class rename and responsive

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,10 +3,10 @@
 
 @import 'basic/base';
 
-@import 'components/NavBar';
+@import 'components/navBar';
 
-@import 'pages/Home';
-@import 'pages/Support';
-@import 'pages/Products';
-@import 'pages/Profile';
-@import 'pages/Team';
+@import 'pages/home';
+@import 'pages/support';
+@import 'pages/products';
+@import 'pages/profile';
+@import 'pages/team';
