--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,7 +3,7 @@
     display: block;
     text-align: center;
     background-color: $primary-color;
-    height: 100%;
+    height: 1000vw;
 
     &__explication, &__container {
         margin-top: 10rem;
