--- a/src/css/main.css
+++ b/src/css/main.css
@@ -115,7 +115,7 @@ html, body {
   display: block;
   text-align: center;
   background-color: #060b26;
-  height: 100%; }
+  height: 1000vw; }
   .home__explication, .home__container {
     margin-top: 10rem; }
   .home__explication {
